--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="">
+<html lang="" class="bg-zinc-800 text-zinc-50">
 <head>
     <meta charset="UTF-8"/>
     <link rel="icon" href="/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="src/assets/main.css" rel="stylesheet">
     <title>Dashboard</title>
 </head>
 <body>
