--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="" class="bg-zinc-900 text-zinc-50">
-<head>
-    <meta charset="UTF-8"/>
-    <link rel="icon" href="/favicon.ico"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="src/assets/main.css" rel="stylesheet">
+<html lang="" class="bg-zinc-900 text-zinc-100">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="src/assets/main.css" rel="stylesheet" />
     <title>Dashboard</title>
-</head>
-<body>
-<div id="app"></div>
-<script type="module" src="/src/main.ts"></script>
-</body>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
